Implement change default dashboard feature Updated some css for common buttons